--- a/_config.yml
+++ b/_config.yml
@@ -14,22 +14,22 @@ author: Fábio Madeira
 # jekyllt.github.io - all contents run on /vitae/
 # for a normal use at the base of the server change it to "/"
 baseurl: /vitae/
-title: Chris Turner's Resume
-name: Chris Turner
-email: christurner@me.com
-email_full: mailto:youremail@me.com
+title: Chinmaya Bhat's Resume
+name: Chinmaya Bhat
+email: chinmaybhat94@gmail.com
+email_full: mailto:chinmaybhat94@gmail.com
 website: github.io/sustain
-website_full: https://jekyllt.github.io/sustain
+website_full: https://www.linkedin.com/in/chinmaya-bhat-9a2856a9/
 github: trending
-twitter: twitter
-tel: +44 0000 000000
-tel_full: tel:+440000000000
-google_maps: 'https://www.google.co.uk/maps/place/44+Perth+St,+Edinburgh,+Edinburgh+City+EH3+5BL'
+twitter: @ChinmayKBhat
+# tel: +44 0000 000000
+# tel_full: tel:+440000000000
+# google_maps: 'https://www.google.co.uk/maps/place/44+Perth+St,+Edinburgh,+Edinburgh+City+EH3+5BL'
 address:
-  street: 44 Perth Street
-  postcode: EH3 5BL
-  city: Edinburgh
-  country: United Kingdom
+  #street: 44 Perth Street
+  #postcode: EH3 5BL
+  city: Duisburg
+  country: Germany
 google_analytics: UA-69300817-1
 
 # needed for travis-ci build
