--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: Fábio Madeira
 # jekyllt.github.io - all contents run on /vitae/
 # for a normal use at the base of the server change it to "/"
 baseurl: /vitae/
-title: Chinmaya Bhat's Resume
+title: "Chinmaya Bhat's Resume"
 name: Chinmaya Bhat
 email: chinmaybhat94@gmail.com
 email_full: mailto:chinmaybhat94@gmail.com
