--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ email_full: mailto:chinmaybhat94@gmail.com
 website: github.io/sustain
 website_full: https://www.linkedin.com/in/chinmaya-bhat-9a2856a9/
 github: trending
-twitter: asdf
+#twitter: asdf
 # tel: +44 0000 000000
 # tel_full: tel:+440000000000
 # google_maps: 'https://www.google.co.uk/maps/place/44+Perth+St,+Edinburgh,+Edinburgh+City+EH3+5BL'
