--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ title: "Chinmaya Bhat's Resume"
 name: Chinmaya Bhat
 email: chinmaybhat94@gmail.com
 email_full: mailto:chinmaybhat94@gmail.com
-website: github.io/sustain
+website: https://bhatchinmaya.github.io/
 website_full: https://www.linkedin.com/in/chinmaya-bhat-9a2856a9/
 github: trending
 #twitter: asdf
