--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author: Fábio Madeira
 # edit this section with your information
 # jekyllt.github.io - all contents run on /vitae/
 # for a normal use at the base of the server change it to "/"
-baseurl: /vitae/
+# baseurl: /vitae/
 title: "Chinmaya Bhat's Resume"
 name: Chinmaya Krishnamurhthy Bhat
 email: chinmaybhat94@gmail.com
