--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ email: chinmaybhat94@gmail.com
 #email_full: mailto:chinmaybhat94@gmail.com
 #website: https://bhatchinmaya.github.io/
 #website_full: https://www.linkedin.com/in/chinmaya-bhat-9a2856a9/
-# linkedin: https://www.linkedin.com/in/chinmaya-bhat-9a2856a9/
+linkedin: https://www.linkedin.com/in/chinmaya-bhat-9a2856a9/
 #twitter: asdf
 # tel: +44 0000 000000
 # tel_full: tel:+440000000000
