--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author: Fábio Madeira
 #title: "Chinmaya Bhat's Resume"
 name: Chinmaya Bhat
 email: chinmaybhat94@gmail.com
-#email_full: mailto:chinmaybhat94@gmail.com
+email_full: mailto:chinmaybhat94@gmail.com
 #website: https://bhatchinmaya.github.io/
 #website_full: https://www.linkedin.com/in/chinmaya-bhat-9a2856a9/
 linkedin: in/chinmaya-bhat-9a2856a9/
