--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,8 @@ email_full: mailto:chinmaybhat94@gmail.com
 #website: https://bhatchinmaya.github.io/
 #website_full: https://www.linkedin.com/in/chinmaya-bhat-9a2856a9/
 linkedin: in/chinmaya-bhat-9a2856a9/
-facebook: chinmay.bhat.16/
+#substack: https://chinmaybhat99.substack.com/
+#facebook: chinmay.bhat.16/
 #twitter: asdf
 # tel: +44 0000 000000
 # tel_full: tel:+440000000000
